Selcards on rotated cards bugfix

--- a/content/game.html
+++ b/content/game.html
@@ -108,8 +108,10 @@
 		</div>
 
 		<div id="selMenu">
-			<div onclick="selToggleFacedown()">Toggle all facedown</div>
-			<div onclick="selTogglePeek()">Peek at all cards</div>
+			<div onclick="selRotate(90)">Rotate all 90&deg;</div>
+			<div onclick="selRotate(-90)">Rotate all -90&deg;</div>
+			<div onclick="selDoFun( toggleFacedown )">Toggle all facedown</div>
+			<div onclick="selDoFun( togglePeek )">Peek at all cards</div>
 		</div>
 
 		<div id="displaycardMenu">
