--- a/content/game.html
+++ b/content/game.html
@@ -10,6 +10,7 @@
 		</div>
 
 		<div class="BrowserWindow" style="bottom: 20%;" id="browser">
+			<div id="browserNum">Cards: 60</div>
 			<div class="HideButton" onclick="closeBrowser()">Close</div>
 			<div class="BrowserContent" id="browsercontent"></div>
 		</div>
@@ -78,6 +79,7 @@
 		<p><b>F1:</b> Clear all pins</p>
 		<p><b>Shift+Drag on pile:</b> Put cards on bottom of Pile</p>
 		<p><b>Ctrl+x/Ctrl+Delete:</b> Delete selected counter</p>
+		<p><b>F2/Esc:</b> Open/close chat</p>
 	</div>
 
 	<img id="showCard">
