Added tooltip over piles

--- a/content/game.html
+++ b/content/game.html
@@ -24,6 +24,7 @@
 			<a>Enemy cards: <span id="Ecardnum">0</span></a>
 		</div>
 
+		<div id="tooltip"></div>
 		<div class="Dropdown" id="contextMenu"></div>
 
 		<div id="Utility">
