Display number of cards in hand

--- a/content/game.html
+++ b/content/game.html
@@ -10,12 +10,13 @@
 		</div>
 
 		<div class="BrowserWindow" style="bottom: 20%;" id="browser">
-			<div id="browserNum">Cards: 60</div>
+			<div class="BrowserInfo" id="browserNum"></div>
 			<div class="HideButton" onclick="closeBrowser()">Close</div>
 			<div class="BrowserContent" id="browsercontent"></div>
 		</div>
 
 		<div id="hand">
+			<div class="BrowserInfo" style="display: none;" id="handNum">Cards: 0</div>
 			<div class="HideButton" onclick="toggleHand()">Hand</div>
 			<div id="handcontainer"></div>
 		</div>
