Added: Copy selected counters

--- a/content/game.html
+++ b/content/game.html
@@ -82,6 +82,7 @@
 		<p><b>F1:</b> Clear all pins</p>
 		<p><b>Shift+Drag on pile:</b> Put cards on bottom of Pile</p>
 		<p><b>Ctrl+x/Ctrl+Delete:</b> Delete selected counter</p>
+		<p><b>Ctrl+c:</b> Copy selected counter</p>
 		<p><b>F2/Esc:</b> Open/close chat</p>
 	</div>
 
