Enemy actions more understandable

--- a/content/game.html
+++ b/content/game.html
@@ -25,6 +25,7 @@
 			<a>Enemy cards: <span id="Ecardnum">0</span></a>
 		</div>
 
+		<div id="actiontip"></div>
 		<div id="tooltip"></div>
 		<div class="Dropdown" id="contextMenu"></div>
 
