Add: Action to shuffle selected cards

--- a/content/game.html
+++ b/content/game.html
@@ -119,6 +119,7 @@
 			<div onclick="selRotate(-90)">Rotate all -90&deg;</div>
 			<div onclick="selDoFun( toggleFacedown )">Toggle all facedown</div>
 			<div onclick="selDoFun( togglePeek )">Peek at all cards</div>
+			<div onclick="selShuffle()">Shuffle all cards</div>
 		</div>
 
 		<div id="displaycardMenu">
