Indicate hover + Play cards facedown via middle click

--- a/content/game.html
+++ b/content/game.html
@@ -25,6 +25,7 @@
 			<a>Enemy cards: <span id="Ecardnum">0</span></a>
 		</div>
 
+		<div id="enemyHover"></div>
 		<div id="actiontip"></div>
 		<div id="tooltip"></div>
 		<div class="Dropdown" id="contextMenu"></div>
@@ -79,12 +80,13 @@
 	<div id="manualWindow">
 		<p><u>Manual</u></p>
 		<p><b>Right Click:</b> Dropdown</p>
-		<p><b>Ctrl+Left Click:</b> Set a pin</p>
+		<p><b>Ctrl+Left Click/Middle Click:</b> Set a pin</p>
 		<p><b>F1:</b> Clear all pins</p>
 		<p><b>Shift+Drag on pile:</b> Put cards on bottom of Pile</p>
 		<p><b>Ctrl+x/Ctrl+Delete:</b> Delete selected counter</p>
 		<p><b>Ctrl+c:</b> Copy selected counter</p>
 		<p><b>F2/Esc:</b> Open/close chat</p>
+		<p><b>Ctrl+Left Click/Middle Click:</b> Play card from hand facedown</p>
 	</div>
 
 	<img id="showCard">
