--- a/content/game.html
+++ b/content/game.html
@@ -87,8 +87,8 @@
 		<p><b>Ctrl+Left Click/Middle Click:</b> Set a pin</p>
 		<p><b>F1:</b> Clear all pins</p>
 		<p><b>Shift+Drag on pile:</b> Put cards on bottom of Pile</p>
-		<p><b>Ctrl+x/Ctrl+Delete:</b> Delete selected counter</p>
-		<p><b>Ctrl+c:</b> Copy selected counter</p>
+		<p><b>Ctrl+Delete:</b> Delete selected counter</p>
+		<p><b>Ctrl+Insert:</b> Copy selected counter</p>
 		<p><b>F2/Esc:</b> Open/close chat</p>
 		<p><b>Ctrl+Left Click/Middle Click:</b> Play card from hand facedown</p>
 	</div>
