Add link to Github repo

--- a/content/index.html
+++ b/content/index.html
@@ -10,6 +10,7 @@
             <h2><u>Cardsimulator</u></h2>
             <div onclick="goTo('game.html')">Play</div>
             <div onclick="goTo('builder.html')">Create deck</div>
+            <div onclick="gotoRepo()">Repository</div>
         </div>
     </body>
 
